JS: assume build from parent module + fix version of macros paradise plugin

--- a/JS/example.html
+++ b/JS/example.html
@@ -1,8 +1,8 @@
 <html>
   <head>
     <script src="./src/main/javascript/scalaxy.js"></script>
-    <script src="./target/javascript/JavaScriptTest.js"></script>
-    <script src="./target/javascript/Run.js"></script>
+    <script src="../target/javascript/JavaScriptTest.js"></script>
+    <script src="../target/javascript/Run.js"></script>
   </head>
   <body>
     <script>
