--- a/JS/example.html
+++ b/JS/example.html
@@ -6,6 +6,7 @@
     <script src="./src/main/javascript/scalaxy.lang.Object.js"></script>
     <script src="./src/main/javascript/scalaxy.lang.Class.js"></script>
     <script src="./src/main/javascript/experiments.js"></script>
+    <script src="./src/main/javascript/mixins.js"></script>
     <!--
     <script src="../target/javascript/scalaxy.js"></script>
     -->
@@ -18,29 +19,6 @@
       console.log(obj);
       console.log(obj.getClass());
       //document.write(JavaScriptTest)
-
-
-      if (!test2) var test2 = {};
-
-      //goog.provide("test.Test");
-      scalaxy.lang.Class.defineClass(
-          new scalaxy.lang.Class({
-            owner: test2,
-            name: "test2.Test",
-            simpleName: "Test",
-            parent: scalaxy.lang.Class.Object,
-            traits: [],
-            constructor: function(x) {
-              this.x = x;
-              window.console.log('Constructing Test with x = ' + this.x)
-            },
-            members: {
-              blah: function() {
-                window.console.log('blah ' + this.x)
-              }
-            },
-            module: null
-          }));
 
     </script>
   </body>
